# LearningDemo

./: Bookmarks  README.md
Algorithm/: settings.gradle.kts
Algorithm/app/: build.gradle.kts
Android/Basic/: Activity-launch-mode.md  Activity-life-cycle.md  Intent 与 IntentFilter.md  Intent-and-IntentFilter.md  README.md  SavingData.md
Android/Expert/: README.md
Android/FourComponent/: settings.gradle
Android/FourComponents/: Activity-life-cycle.md  Intent-and-IntentFilter.md  MIME-introduce.md
Android/GradleGroovyDemo/: build.gradle  settings.gradle
Android/IPC/: IPC-five.md  IPC-four.md  IPC-six.md  IPC-two.md
Android/OkHttpDemo/: local.properties
Android/OpenSourceLibUsing/: ReadMe.md
Android/Others/: Camera.md  DispalyBitmaps.md
Android/PostDetailActivity/: build.gradle  settings.gradle
Android/RetrofitDemo/: local.properties
Android/Senior/: README.md
Android/View/: View-four-scroll-conflict.md  View-six-RemoteView.md  View-three-dispacth-event.md
CapturingPhotos/app/: build.gradle
ComputerFundamentals/Network/: README.md
DesignPattern/: settings.gradle.kts
DesignPattern/app/: build.gradle.kts
DesignPattern/src/: Main.java
DisplayBitmaps/app/: build.gradle
InternalStrength/: GameCenterSubscribe.drawio
Part1/Android_advanced/OpenCvDemo4/app/: CMakeLists.txt  build.gradle
Part1/Android_advanced/OpenCvDemo4/app/src/main/: AndroidManifest.xml
Part1/Android_advanced/OpenCvDemo4/app/src/main/cpp/: native-lib.cpp
Part1/Android_advanced/OpenCvDemo4/app/src/main/res/values/: strings.xml
SavingData/: gradle.properties
(+1883 files in other folders)
